test/parse_errors/cjs.js
module.exports = {};

function functionAbove() {
	
}

function someFunction() {
	something weird();
}

function anotherFunction() {

}
